--- a/css/styles.css
+++ b/css/styles.css
@@ -1,90 +1,24 @@
-/*BODY*/
-
-body {
-    text-align: center;
-    margin: 0px;
-    padding: 0px;
+body{
     background-color: black;
+    font-family: 'Righteous', Arial, Helvetica, sans-serif;
 }
-
-/*****/
-/* NAVIGATION */
-.navigation {
-    display: inline-block;
+#welcome {
     background-color: black;
-    text-align: center;
-}
-.nav-stick {
-    font-size: 26px;
-    font-family: dnd;
-    color: wheat;
-    
-}
-.nav-ref {
-    text-decoration: none;
-    color: wheat;
-}
-.nav-ref:visited {
-    color: wheat;
-}
-/**  MONTHLY  **/
-/*IMAGES BACKGROUND - Containers*/
-.first-part{
-    display: inline-block;
-    
-}
-.first-Image{
-    
-    width: 100%;
     height: 100%;
-}
-.HW-1 {
-    
-    position: absolute;
-    top: 100px;
-    right: 75px;
-    width: 400px;
-    height: 200px;
-}
+    height: fit-content;
 
-.second-part{
-    display: inline-block;
+}
+.container-fluid{
     background-color: black;
+    color:hotpink;
+    padding: 7% 15%;
     text-align: center;
+    height:fit-content ;
 }
-.second-Image{
-   width: 50%;
-   height: 100%;
+h1{
+    font-size: 8rem;
+    padding-bottom: 10%;
 }
-
-.third-part {
-    display: inline-block;
- 
+a {
+    color: hotpink;
 }
-.third-Image{
-    width: 100%;
-    height: 100%;
-}
-/*** FONTS ***/
-@font-face {
-    font-family: dnd;
-    src: url(sources/fonts/Grenze/Grenze-Regular.ttf);
-}
-/** HEADERS and PARAGRAPHS **/
-.header-day {
-    font-size: 56px;
-    text-align: right;
-    font-family: dnd;
-    color: wheat;
-}
-.day-paragraph{
-
-    font-size: 18px;
-    text-align: right;
-    font-family: dnd;
-    color: white;
-}
-/**/
-
-
-
